# intuition

./: Cargo.toml  LICENSE  README.md
hashsum/: Cargo.toml
hashsum/src/: main.rs
hashsum/src/components/: generator.rs  hasher.rs  heap.rs  mod.rs  summer.rs
hashsum/src/profile/: profiler.rs  timer.rs
hashsum/src/profile/dash/: ui.rs
intuition/: Cargo.toml  README.md
intuition/examples/: simple.rs
intuition/src/: lib.rs  profiler.rs  timer.rs
intuition/src/dash/: mod.rs  ui.rs
