[package]
name = "traced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
crossbeam-channel = "0.5.6"
crossterm = "0.25.0"
once_cell = "1.17.0"
rand = "0.8.5"
sha2 = "0.10.6"
tui = "0.19.0"
intuition = { path = "../intuition/" }
