[package]
name = "hashsum"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
crossbeam-channel = "0.5.6"
rand = "0.8.5"
sha2 = "0.10.6"
intuition = { path = "../intuition/" }
