[package]
name = "intuition"
version = "0.1.0"
description = "Gain intuition about the goings-on of your multithreaded/multicomponent programs"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
once_cell = "1.17.0"
rand = "0.8.5"
sha2 = "0.10.6"
tui = "0.19.0"